# Flotilla

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main  meson.build  run_n.sh  todo.txt
src/: main.cpp
src/agent/: AgentDispatcher.cpp  AgentDispatcher.hpp  IdentityManager.hpp  NetworkManager.cpp  NetworkManager.hpp  SessionFactory.cpp  SessionFactory.hpp  agent_proc.cpp  agentd.cpp  credentials.h  main.cpp  meson.build
src/agent/gui/: agent.cpp  main.cpp
src/agent/zenoh/: ConnectionStrategy.cpp  ConnectionStrategy.hpp  ZenohController.hpp
src/controller/: controller.cpp
src/proto/: service.proto
src/server/: server.cpp  server.hpp
